vhdl/Zynq/zynqtest/zynqtest.sdk/.metadata/.plugins/org.eclipse.cdt.ui/gpiotest_xgpio_intr_tapp_example_1.build.log
13:27:00 **** Build of configuration Debug for project gpiotest_xgpio_intr_tapp_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/xgpio_intr_tapp_example.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xgpio_intr_tapp_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../gpiotest/ps7_cortexa9_0/include -MMD -MP -MF"src/xgpio_intr_tapp_example.d" -MT"src/xgpio_intr_tapp_example.o" -o "src/xgpio_intr_tapp_example.o" "../src/xgpio_intr_tapp_example.c"
../src/xgpio_intr_tapp_example.c: In function 'main':
../src/xgpio_intr_tapp_example.c:92:33: error: 'XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_0_DEVICE_ID'?
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^
../src/xgpio_intr_tapp_example.c:92:33: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xgpio_intr_tapp_example.c:92:33: note: each undeclared identifier is reported only once for each function it appears in
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^
../src/xgpio_intr_tapp_example.c:92:33: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/subdir.mk:21: recipe for target 'src/xgpio_intr_tapp_example.o' failed
make: *** [src/xgpio_intr_tapp_example.o] Error 1

13:27:00 Build Finished (took 362ms)

